--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -20,6 +20,12 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-core</artifactId>
+      <version>3.9.6</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>org.apache.maven.plugin-tools</groupId>
       <artifactId>maven-plugin-annotations</artifactId>
       <version>3.10.2</version>
@@ -47,7 +53,7 @@
         <executions>
           <execution>
             <id>default-descriptor</id>
-            <phase>process-classes</phase>
+            <phase>verify</phase>
           </execution>
         </executions>
       </plugin>
